修改显示问题

--- a/vms/templates/vm_image_release.html
+++ b/vms/templates/vm_image_release.html
@@ -213,7 +213,7 @@
             event.preventDefault();
 
             bt.disabled = true;
-            tst.innerHTML = '<span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> 提交中, 时间较长...'
+            tst.innerHTML = '<span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> 提交中, 请耐心等待时间较长, 大约10 分钟左右...'
             var timerSpan = document.getElementById("timerSpan");
             timerSpan.style.display = "inline";
             startTime = Date.now();
